--- a/app/views/tasks/_tasks.html.erb
+++ b/app/views/tasks/_tasks.html.erb
@@ -12,9 +12,9 @@
             <div class="status" id="st_<%= task.id %>"> <%= task.status %></div>
           </div>
           <div class="actions hidden">
-            <div><%= link_to 'Show', task %></div>
-            <div><%= link_to 'Edit', edit_task_path(task) %></div>
-            <div><%= destroy_link task.id %></div>
+            <div><%= link_to image_tag("show.png"), task %></div>
+            <div><%= link_to image_tag("edit.png"), edit_task_path(task) %></div>
+            <div><%=  destroy_link task.id %></div>
           </div>
           <div style="clear:both;"></div>
         </div>
