--- a/app/views/salesforce/index.html.erb
+++ b/app/views/salesforce/index.html.erb
@@ -5,10 +5,14 @@
 </div>
 <br/>
 
-<table>
+<table cellspacing="10px">
   <tr>
+    <td><b>#</b></td>
     <td><b>First name</b></td>
     <td><b>Last name</b></td>
+    <td><b>Company</b></td>
+    <td><b>Status</b></td>
+    <td colspan="2"><b>Actions</b></td>
   </tr>
 
   <% @data.records.each_with_index do |record, i| %>
@@ -16,7 +20,10 @@
         <td><%= i %></td>
         <td><%= record.firstName %></td>
         <td><%= record.lastName %></td>
-        <td><%= link_to "delete", {:controller => :leads, :action=> :destroy, :lead_id => record.id.to_s} %></td>
+        <td><%= record.company %></td>
+        <td><%= record.status %></td>
+        <td><%= link_to "delete", {:controller => :leads, :action=> :destroy, :lead_id => record["Id"].first} %></td>
+        <td><%= link_to "update", {:controller => :leads, :action=> :edit, :lead_id => record["Id"].first} %></td>
       </tr>
   <% end %>
 
