--- a/app/views/salesforces/new.html.erb
+++ b/app/views/salesforces/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New salesforce</h1>
+<h1>New Lead</h1>
+
+
 
 <div>
   <%= submit_tag 'Create' %>
@@ -9,171 +11,189 @@
 </div>
 
 <div class="lead_information" align="center">
-  <div class="left_info">
-
+  
+  <div class="info">
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Lead Owner' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%='Lead owner name'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div>
+      <div class="row row_name">
         <%= label_tag 'First name' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= select_tag 'salutation' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'first_name'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Last name' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'last_name'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Company' %>
       </div>
       <div class="row">
         <%= text_field_tag 'company'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Title' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'title'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Lead sourse' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= select_tag 'lead_sourse' %>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Compaing' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'compaing' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= link_to image_tag("show.png", :size => "20x20",:border => "0") %>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Industry' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= select_tag 'industry' %>
       </div>
     </div>
-
+    <div style="clear:both"></div>
   </div>
 
-  <div class="right_info">
+  <div class="info">
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Phone' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'phone'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Mobile' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'mobile'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Fax' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'fax'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Email' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'email'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Website' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'website'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Website' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'website'%>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Lead status' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= select_tag 'lead_status' %>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'Rating' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= select_tag 'rating' %>
       </div>
     </div>
+    <div style="clear:both"></div>
 
     <div class="column">
-      <div class="row">
+      <div class="row row_name">
         <%= label_tag 'No. of Employees' %>
       </div>
-      <div class="row">
+      <div class="row furniture">
         <%= text_field_tag 'employees'%>
       </div>
     </div>
   </div>
+  
+  <div style="clear:both"></div>
 
-</div><br/><br/><br/>
+</div>
+<br/><br/><br/>
 
 <%= link_to 'Back', salesforces_path %>
