--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,7 @@
 
 <%= link_to 'New task', new_task_path %>
 <%= link_to 'New category', new_category_path %>
+<%= link_to 'Category list', new_category_path%>
 
 <p>Category<br/>
   <%= select_tag "Categories", "<option value='all'> all </option>" + options_from_collection_for_select(@categories, "id", "category_name", params[:category_id].to_i),:onchange=> "change_category(this)", :autocomplete => "off"%></p>
