--- a/app/views/salesforces/new.html.erb
+++ b/app/views/salesforces/new.html.erb
@@ -1,122 +1,117 @@
 <h1>New Lead</h1>
-
-
-
-<div>
-  <%= submit_tag 'Create' %>
-</div><br/>
-
 <div class="title">
-  <%= label_tag 'Lead information' %>
-</div>
+      <%= label_tag 'Lead information' %>
+    </div>
 
-<div class="lead_information" align="center">
-  <div class="info">
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Lead Owner' %>
+    <div class="lead_information" align="center">
+      <div class="info">
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Lead Owner' %>
+          </div>
+          <div class="row furniture">
+            <%= current_user.full_name %>
+          </div>
+        </div>
+
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'First name' %>
+          </div>
+          <div class="row furniture">
+            <% options = ["--None--", "Mr.", "Ms.", "Mrs.", "Dr.", "Prof."] %>
+            <%= select_tag 'salutation', options_for_select(options) %>
+          </div>
+          <div class="row furniture">
+            <%= text_field_tag 'firstName' %>
+          </div>
+        </div>
+
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Last name' %>
+          </div>
+          <div class="row furniture">
+            <%= text_field_tag 'lastName' %>
+          </div>
+        </div>
+
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Company' %>
+          </div>
+          <div class="row">
+            <%= text_field_tag 'company' %>
+          </div>
+        </div>
+
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Title' %>
+          </div>
+          <div class="row furniture">
+            <%= text_field_tag 'title' %>
+          </div>
+        </div>
+
+        <div style="clear:both"></div>
+
       </div>
-      <div class="row furniture">
-        <%= 'Lead owner name' %>
+
+      <div class="info">
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Lead status' %>
+          </div>
+          <div class="row furniture">
+            <% options = ["Contacted", "Open", "Qualified", "Unqualified"] %>
+            <%= select_tag 'status', options_for_select(options) %>
+          </div>
+        </div>
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Phone' %>
+          </div>
+          <div class="row furniture">
+            <%= text_field_tag 'phone' %>
+          </div>
+        </div>
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Email' %>
+          </div>
+          <div class="row furniture">
+            <%= text_field_tag 'email' %>
+          </div>
+        </div>
+        <div style="clear:both"></div>
+
+        <div class="column">
+          <div class="row row_name">
+            <%= label_tag 'Rating' %>
+          </div>
+          <div class="row furniture">
+            <% options = ["--None--", "Hot", "Warm", "Cold"] %>
+            <%= select_tag 'rating', options_for_select(options) %>
+          </div>
+        </div>
+        <div style="clear:both"></div>
+
       </div>
     </div>
 
-    <div style="clear:both"></div>
 
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'First name' %>
-      </div>
-      <div class="row furniture">
-        <%= select_tag 'salutation' %>
-      </div>
-      <div class="row furniture">
-        <%= text_field_tag 'first_name' %>
-      </div>
-    </div>
-
-    <div style="clear:both"></div>
-
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Last name' %>
-      </div>
-      <div class="row furniture">
-        <%= text_field_tag 'last_name' %>
-      </div>
-    </div>
-
-    <div style="clear:both"></div>
-
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Company' %>
-      </div>
-      <div class="row">
-        <%= text_field_tag 'company' %>
-      </div>
-    </div>
-
-    <div style="clear:both"></div>
-
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Title' %>
-      </div>
-      <div class="row furniture">
-        <%= text_field_tag 'title' %>
-      </div>
-    </div>
-
-    <div style="clear:both"></div>
-
-  </div>
-
-  <div class="info">
-
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Lead status' %>
-      </div>
-      <div class="row furniture">
-        <%= select_tag 'Lead status' %>
-      </div>
-    </div>
-    <div style="clear:both"></div>
-    
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Phone' %>
-      </div>
-      <div class="row furniture">
-        <%= text_field_tag 'phone' %>
-      </div>
-    </div>
-    <div style="clear:both"></div>
-
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Email' %>
-      </div>
-      <div class="row furniture">
-        <%= text_field_tag 'email' %>
-      </div>
-    </div>
-    <div style="clear:both"></div>
-
-    <div class="column">
-      <div class="row row_name">
-        <%= label_tag 'Rating' %>
-      </div>
-      <div class="row furniture">
-        <%= select_tag 'rating' %>
-      </div>
-    </div>
-    <div style="clear:both"></div>
-
-  </div>
-</div>
-<div style="clear:both"></div>
-<div>
-  <%= link_to 'Back', salesforces_path %>
-</div>
+<%= submit_tag "Create" %> &nbsp; <%= link_to "Cancel", {:controller => :leads, :action => :show_all_leads} %>
