--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -18,7 +18,7 @@
 </div>
 <div style="clear:both"></div>
 <div>
-  <% @data.each_with_index do |record, i| %>
+  <% @data.records.each_with_index do |record, i| %>
       <div class="tasks">
         <div class="task_container">
           <div class="check">
