some gui changes

--- a/app/views/leads/index.html.erb
+++ b/app/views/leads/index.html.erb
@@ -8,13 +8,15 @@
 <br/>
 <br/>
 
-<div class="title">
-  <div class="check">#</div>
-  <div class="info">First name</div>
-  <div class="info">Last name</div>
-  <div class="info">Company</div>
-  <div class="status">Status</div>
-  <div class="actions_title" style="text-align:center">Actions</div>
+<div class="title tasks">
+  <div class="task_container">
+    <div class="check">#</div>
+    <div class="info">First name</div>
+    <div class="info">Last name</div>
+    <div class="info">Company</div>
+    <div class="status">Status</div>
+    <div class="actions_title" style="text-align:center">Actions</div>
+  </div>
 </div>
 <div style="clear:both"></div>
 <div>
@@ -30,8 +32,8 @@
           <div class="status"> <%= record.status %></div>
 
           <div class="actions hidden" style="text-align: center;">
-            <div><%= link_to "delete", {:controller => :leads, :action=> :destroy} %></div>
-            <div><%= link_to "update", {:controller => :leads, :action=> :edit} %></div>
+            <div><%= link_to "delete", {:controller => :leads, :action=> :destroy, :lead_id => record["Id"].first} %></div>
+            <div><%= link_to "update", {:controller => :leads, :action=> :edit, :lead_id => record["Id"].first} %></div>
           </div>
         </div>
       </div>
