--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title><%= controller.action_name %></title>
-  <%= stylesheet_link_tag 'scaffold', 'main', 'lead', 'salesforce' %>
+  <%= stylesheet_link_tag 'scaffold', 'main', 'salesforce' %>
   <%= javascript_include_tag :defaults %>
 
 </head>
