--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -15,6 +15,10 @@
 
 </div>
 <br/>
+<br/>
+<br/>
+
+<%= link_to "leads", :controller => "leads" %>
 
 <script type="text/javascript">
   function change_category(select) {
