--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-  <title><%= controller.action_name %></title>
+   <title>Your awsome facebook connected app</title>
+
   <%= stylesheet_link_tag 'scaffold', 'main', 'salesforce' %>
   <%= javascript_include_tag :defaults %>
+  <script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php" type="text/javascript"></script>
 
 </head>
 <body>
 <p style="color: green"><%= flash[:notice] %></p>
+
+<%= fb_connect_javascript_tag %>
+  <%= init_fb_connect "XFBML" %>
+<%= authlogic_facebook_login_button %>
+
+
 <%if logged_in? %>
     <p style="position:absolute; top:0; right:0;"><%= link_to "Edit", "/users/edit" %>  </p>
     <p style="position:absolute; top:10; right:0;"><%= link_to "Log out", logout_path, { :title => "Log out" }%></p>
